# qryptify

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  docker-compose.yml  main.py  optimizer_results.csv  optimizer_results_strategies.csv  pyproject.toml  requirements.txt  reset_db.sh  verify_ingestion.sh
.github/: CODEOWNERS
.github/workflows/: optimize-smoke.yml  tests.yml
binance_api/: binance_klines.py
examples/binance_api/: binance_time.py  binance_ws_klines.py
qryptify/: README.md  requirements.txt  run.py
qryptify/artifacts/: __init__.py  binance_supported_pairs.py
qryptify/cli/: __init__.py  binance_candlestick_crawler.py  binance_price_realtime_crawler.py
qryptify/config/: config.py  config_root.py
qryptify/constants/: __init__.py  binance_constants.py  timescale_constants.py
qryptify_ingestor/: README.md  backfill_runner.py  binance_client.py  config.yaml  config_utils.py  coordinator.py  fees_snapshot.py  live_runner.py  timescale_repo.py
qryptify_shared/: __init__.py  time.py
qryptify_strategy/: README.md  __init__.py  backtest.py  backtester.py  fees.py  indicators.py  models.py  optimize.py  strategy_base.py  strategy_utils.py
reports/: optimizer_results.csv  optimizer_summary.md
scripts/: fetch_old_candlesticks.py  get_binance_supported_futures.py  run_binance_cli_clean.sh  seed_ohlcv.py
sql/: 001_init.sql  002_strategy.sql  003_fees.sql
tests/: conftest.py  test_backtester.py  test_cli.py  test_cli_db.py  test_cli_real_db.py  test_fees_fallback.py  test_indicators.py  test_pairs_and_config.py  test_strategy_cores.py
(+54 files in other folders)
